2007-03-31 [colin]	2.8.1cvs76

	* AUTHORS
		Add Jean-Luc Biord

2007-03-31 [colin]	2.8.1cvs75

	* src/imap.c
		Apply patch from bug 1172, direct
		access to the folder's session instead
		of using getter. Patch by MartinP

2007-03-31 [paul]	2.8.1cvs74

	* src/gtk/authors.h
		no need to list Fabien twice!

2007-03-31 [colin]	2.8.1cvs73

	* src/inc.c
		If we're currently "overriding for %d minutes",
		don't ask

2007-03-31 [colin]	2.8.1cvs72

	* src/compose.c
	* src/imap.c
	* src/inc.c
	* src/inc.h
	* src/messageview.c
	* src/news.c
	* src/plugins/spamassassin/spamassassin.c
		Offline override: Add a parameter to allow
		asking even if the override timer is running.
		Allows to ask every time the user makes an
		explicit action needing online access (such
		as Get Mail), and not when the action is 
		implicit (such as opening an IMAP folder)

2007-03-31 [colin]	2.8.1cvs71

	* src/inc.c
		Override offline: "No" answer shouldn't
		re-ask after 3 seconds, but 10 minutes. 

2007-03-30 [colin]	2.8.1cvs70

	* src/common/socket.c
		Better error reporting on unix socket
		failure (bind usually)
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
		Label window: add a pulsing progress
		bar to show we're not hung :)
	* src/folderview.c
	* src/main.c
	* src/plugins/pgpcore/sgpgme.c
		Update API

2007-03-30 [colin]	2.8.1cvs69

	* src/pop.c
	* src/prefs_common.c
		Fix possible trashing of history and uidl
		files on disk full problems

2007-03-30 [paul]	2.8.1cvs68

	* src/mainwindow.c
	* src/summaryview.c
	* src/summaryview.h
		update summary when changing layout type
		(fixes wrong folder icon being displayed)
		Thanks to Colin

2007-03-29 [colin]	2.8.1cvs67

	* src/prefs_ext_prog.c
		The browser pref is irrelevant on Maemo

2007-03-29 [colin]	2.8.1cvs66

	* src/compose.c
	* src/compose.h
		Maemo: dynamically switch headers/text position
	* src/prefs_common.c
		Maemo: hide compose's ruler by default
	* src/common/socket.c
	* src/common/socket.h
		Fix build warning
